2007-01-21  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/add_window.c (GetWindowSizeHints):
	* fvwm/geometry.c (constrain_size):
	undefine macros after use
	(constrain_size):
	reindented and cleaned up
	do not grow a window because of aspect ratio if this is not explicitly
	allowed by the CS_ROUND_UP flag

2007-01-20  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.c (module_receive):
	(module_input_discard):
	allocate input data in just one call - better perfomance

2007-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (__place_get_wm_pos):
	simplified to a simple loop
	(__explain_placement):
	added explanation of new placement styles

	* fvwm/placement.c (__place_get_wm_pos):
	cleanup
	(__pl_center_get_pos_simple):
	(__pl_under_mouse_get_pos_simple):
	(__pl_cascade_get_pos_simple):
	(__pl_manual_get_pos_simple):
	(__place_get_wm_pos):
	use new placement interface for CenterPlacement, UnderMousePlacement,
	ManualPlacement, CascadePlacement

	* fvwm/placement.c (__sp_get_first_pos):
	(__sp_get_next_pos):
	(__sp_get_pos_penalty):
	(__place_get_wm_pos):
	use new placement interface for SmartPlacement
	(SmartPlacement):
	removed function

	* fvwm/placement.c:
	don't use inline functions
	(CleverPlacement):
	(placement_loop):
	renamed function and generalized the placement interface to deal with
	any algorithm in the same way
	(__place_get_wm_pos):
	use new placement interface

	* NEWS:
	* configure.ac:
	increased version to 2.5.22

	* NEWS:
	* configure.ac:
	updated for 2.5.21 release

2007-01-19  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/read.h: Compile syntax error fix.

2007-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (SmartPlacement):
	fixed broken SmartPlacement

2007-01-19  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/expand.c (expand_vars_extended):
	free allocated icon path

2007-01-19  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.1.in: